# iGEM-silk

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  PROGRAM 0.md  PROGRAM.md  README.md  TASK.md  linker  main.py  pyproject.toml  pyrightconfig.json  silk-peptide-a.fasta
.agents/learnings/: MEMORY.md  dependency-version-troubleshooting.md  docker-outside-docker-paths.md  docker-services-build.md  esmfold-docker-build.md  gep-asyncio-gather-exception-safety.md  gep-bepipred3-gpu-timeout-tuning.md  gep-dependency-troubleshooting-methodology.md  gep-docker-container-bridge-ip.md  gep-docker-native-hybrid.md  gep-dual-channel-top-bottom-pipeline.md  gep-esmfold-dependency-matrix.md  gep-esmfold-docker-build.md  gep-freesasa-selectarea-api.md  gep-mhcflurry-model-download.md  gep-omegafold-sync-inference-blocking.md  (+13 more)
.github/: CODEOWNERS
data/: function_2.csv  function_3.csv  function_3_ref.csv  function_4.csv  linker.fasta  silk.fasta
docs/: CONTEXT-old.md  DryLab-Progress-Report.md  HUMAN.md  Inclusion body → Refolding：核心问题与应对（简版）.md  LFS-POINTER-CLEANUP-2026-05-05.md  MICROSERVICE-ARCHITECTURE.md  TOOLS-ARCHITECTURE.md  TOOLS-BUILD.md  TOOLS-DOCKER.md  project-structure.md  transfer-WORKFLOW.md
main/: PLAN.md  README.md  __init__.py  __main__.py  analysis_validate_channel_claim.py  client.py  config.py  data_loader.py  enumeration.py  pipeline.py
main/stages3/: db.py  (+11 more)
output2/: REVIEW.md  STATUS.md
output3/: STATUS.md
output4/: .gitignore  REVIEW.md
references/: how-to-use-Alphafolw.md  how-to-use-GROMACS.md  how-to-use-saas.md  how_to_use_esm.md  identify_the_embedded_sequence.md  what-is-GROMACS.md
scripts/: start_all_tools.sh  start_orchestrator.sh  start_tool.sh  status.sh  stop_all.sh
services/: __init__.py
tools/: .gitignore  Docker.md  README.md  docker-compose.yml  migrate_models.sh  start_all.sh  test_all_services.py  utils.py
tools/AnOxPePred/: .dockerignore  Dockerfile  main.py  pyproject.toml  service.py
tools/AnOxPePred/anoxpepred_data/: One-hot_encoding.txt
tools/AnOxPePred/anoxpepred_sdk/: AnOxPePred_funcs.py  __init__.py  anoxpepred_integration.py
tools/AnOxPePred/references/: SKILL.md  anoxpepred_guide.md
tools/AnOxPePred/tools/: anoxpepred_integration.py
tools/BepiPred-3.0/: .gitignore  Dockerfile  main.py  pyproject.toml  service.py  verification.md
tools/BepiPred-3.0/assets/: test_mini.fasta
tools/BepiPred-3.0/esm_cache/: PEP_0.pt  s1_0.pt  s2_1.pt  s3_2.pt  s4_3.pt  s5_4.pt
tools/BepiPred-3.0/references/: FEATURE_FUNCTIONS.md  FUSION_PEPTIDE_TESTS.md  SKILL.md  TEST_RESULTS.md
tools/BepiPred-3.0/repo/: bepipred3_CLI.py
tools/BepiPred-3.0/repo/esm_encodings/: TEST_PEP1_0.pt  TEST_PEP2_1.pt
tools/BepiPred-3.0/repo/test_output/: Bcell_epitope_preds.fasta  Bcell_epitope_top_20pct_preds.fasta  Bcell_linepitope_top_20pct_preds.fasta  output_interactive_figures.html  raw_output.csv
tools/BepiPred-3.0/scripts/: bepipred_batch.py
tools/ESMFold/: Dockerfile  pyproject.toml  service.py
tools/GraphCPP/: Dockerfile  dashboard.py  main.py  pyproject.toml  service.py  verification.md
tools/GraphCPP/graphcpp/: act.py  dataset.py  fp_generators.py  model.py  pooling.py
tools/GraphCPP/references/: SKILL.md  dataset.md  install.md  model-details.md
tools/HemoPI2/: Dockerfile  SKILL.md  main.py  pyproject.toml  service.py  verification.md
tools/MHCflurry/: Dockerfile  main.py  pyproject.toml  service.py  verification.md
tools/MHCflurry/references/: SKILL.md  allele_support.md  mhcflurry_guide.md  threshold_explanation.md  vaccine_candidate_screening.py
tools/MLCPP/: README.md  SKILL.md  main.py  mlcpp_results.csv  pyproject.toml  service.py  verification.md
tools/MLCPP/references/: mlcpp_guide.md
tools/MLCPP/scripts/: cpp_screening_pipeline.py
tools/OmegaFold/: Dockerfile  pyproject.toml  service.py
tools/SASA/: Dockerfile  pyproject.toml  service.py
tools/SoDoPE_paper_2020/: .dockerignore  Dockerfile  pyproject.toml  service.py
tools/SoDoPE_paper_2020/references/: SKILL.md
tools/SoDoPE_paper_2020/sodope_sdk/: sodope_integration.py
tools/SoDoPE_paper_2020/tools/: __init__.py
tools/TemStaPro/: .dockerignore  .gitignore  Dockerfile  download_models.sh  mlp.py  prottrans.py  pyproject.toml  service.py
tools/TemStaPro/models/: .gitkeep
tools/Tipred/: Dockerfile  SKILL.md  main.py  pyproject.toml  service.py  verification.md
tools/Tipred/.backup/: INDEX.md  execution_log.txt  mvff_model.pkl  predict_output.txt  queries.fasta
tools/Tipred/references/: TIP-redesign.md  tipredictor.py
tools/Tipred/scripts/: tipredictor_full.py  train_example.py
tools/ToxinPred3/: Dockerfile  main.py  pyproject.toml  service.py  toxinpred_features.py  verification.md
tools/ToxinPred3/references/: SKILL.md  api_reference.md  biological_background.md  installation.md
tools/ToxinPred3/scripts/: demo.py
tools/Waveflow/: Dockerfile  pyproject.toml  service.py
tools/algpred2/: Dockerfile  MEMORY.md  SKILL.md  Sequence_1  main.py  pyproject.toml  seq.aac  service.py  verification.md
tools/algpred2/outputs/: algpred2_lines.csv  test_algpred2_fasta.csv  test_script.csv
tools/algpred2/references/: cli_usage.md  installation.md  methodology.md  test_results.md
tools/algpred2/scripts/: inspect_entrypoints.py  inspect_submodules.py  run_prediction.py  test_import_and_dir.py
tools/algpred2/test_input/: test_lines.txt
tools/pLM4CPPs/: .gitignore  Dockerfile  main.py  predict.py  pyproject.toml  service.py  verification.md
tools/pLM4CPPs/.backup/: INDEX.md  predictions.csv  user_dataset_empty.csv  user_dataset_esm2_t6_8M_UR50D_unified_320_dimension.csv  user_dataset_invalid_dim.csv  user_dataset_single.csv  verification_logs.txt
tools/pLM4CPPs/pLM4CPPs-main/: .gitattributes  user_dataset_esm2_t6_8M_UR50D_unified_320_dimension.csv  user_dataset_invalid_dim.csv  user_dataset_single.csv
tools/pLM4CPPs/pLM4CPPs-main/embedded_data/: whole_sample_dataset_esm2_t6_8M_UR50D_unified_320_dimension.csv
tools/pLM4CPPs/pLM4CPPs-main/models/ESM2-320/: scaler_params.npz
tools/pLM4CPPs/references/: SKILL.md
(+1081 files in other folders)
