[project]
name = "igem-silk"
version = "1.0.0"
description = "丝素蛋白融合功能肽设计平台 - 微服务架构"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # HTTP 客户端
    "httpx[socks]>=0.27.0",
    # 数据处理
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "biopython>=1.87",
    # 验证
    "pydantic>=2.0.0",
    "requests>=2.34.1",
    "duckdb>=1.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[project.scripts]
igem-silk = "main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
