[project]
name = "anoxpepred"
version = "1.1.0"
description = "AnOxPePred 微服务 - 抗氧化肽预测工具"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# ML 模式：完整功能（TensorFlow 模型预测）
ml = [
    "tensorflow>=2.15.0",
    "biopython>=1.80",
]
# 参考代码依赖（运行 AnOxPePred_funcs.py 需要）
reference = [
    "scikit-learn>=1.0",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "statsmodels>=0.14",
]
# 微服务模式：HTTP 接口支持
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]
# 全部依赖
all = [
    "tensorflow>=2.15.0",
    "biopython>=1.80",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/TobiasHeOl/AnOxPePred"