[project]
name = "bepipred-3-0"
version = "0.0.12.7"
description = "BepiPred-3.0 B 细胞表位预测微服务"
requires-python = ">=3.11"
dependencies = [
    "bp3==0.0.12.7",
    "fair-esm>=1.0.3",
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "plotly>=5.8.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
ml = [
    "bp3==0.0.12.7",
    "fair-esm>=1.0.3",
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "plotly>=5.8.0",
]
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]
all = [
    "bp3==0.0.12.7",
    "fair-esm>=1.0.3",
    "torch>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "plotly>=5.8.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]