[project]
name = "graphcpp-service"
version = "1.0.0"
description = "GraphCPP 微服务 - 图神经网络细胞穿膜肽预测"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "torchvision>=0.26.0",
    "deepchem>=2.8.0",
    "rdkit>=2022.09.5",
    "pyyaml",
]
all = []
