[project]
name = "hemopi2-service"
version = "0.1.0"
description = "HemoPI2 微服务 - 肽溶血性预测工具"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# ML 模式：完整功能
ml = [
    "hemopi2>=1.3",
    "torch>=2.0.0",
]
# 微服务模式：HTTP 接口支持
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]
# 全部依赖
all = [
    "hemopi2>=1.3",
    "torch>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]