[project]
name = "mhcflurry-skill"
version = "1.0.0"
description = "MHC I类肽结合亲和力预测工具"
requires-python = ">=3.10"
dependencies = [
    "mhcflurry>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[tool.hatch.build.targets.wheel]
packages = []