[project]
name = "mhcflurry-service"
version = "1.0.0"
description = "MHCflurry 微服务 - MHC I类肽结合亲和力预测工具"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# ML 模式：完整功能
ml = [
    "mhcflurry>=2.0.3",
]
# 微服务模式：HTTP 接口支持
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]
# 全部依赖
all = [
    "mhcflurry>=2.0.3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]