[project]
name = "mlcpp"
version = "0.1.0"
description = "MLCPP microservice - Machine Learning-based Cell Penetrating Peptide Predictor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "joblib>=1.4.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
all = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
virtual-live-references = { mlcpp = "tools.mlcpp_integration" }