[project]
name = "sodope"
version = "1.0.0"
description = "SoDoPE 微服务 - Solubility-Weighted Index (SWI) 蛋白质溶解度预测工具"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]
all = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/Gardner-BinfLab/TIsigner"
Paper = "https://doi.org/10.1093/bioinformatics/btaa578"
