[project]
name = "temstapro-service"
version = "1.0.0"
description = "Protein thermostability prediction microservice — ProtT5-XL + MLP ensemble"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "httpx[socks]>=0.27.0",
    "protobuf>=7.34.1",
    "tiktoken>=0.12.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "sentencepiece>=0.1.96",
]

all = ["temstapro-service[ml]"]

[tool.uv]
package = false

[tool.ruff.lint]
ignore = ["F401", "E402", "F841"]
