[project]
name = "toxinpred3"
version = "1.0.0"
description = "ToxinPred3 微服务 - 肽毒性预测工具"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "pandas",
    "scikit-learn==1.2.2",
    "joblib",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
# ML 模式：完整功能
ml = [
    "toxinpred3",
]
# 微服务模式：HTTP 接口支持
service = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]
# 全部依赖
all = [
    "toxinpred3",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]