[project]
name = "toxinpred3"
version = "1.0.0"
description = "ToxinPred3 微服务 - 肽毒性预测工具"
requires-python = ">=3.11"
dependencies = [
    "numpy<2",
    "pandas",
    "scikit-learn==1.2.2",
    "joblib",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
# 核心模型依赖
ml = [
    "toxinpred3",
]
# 全部依赖（模型 + 服务）
all = [
    "toxinpred3",
]