[project]
name = "plm4cpps"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.87",
    "fair-esm>=2.0.0",
    "h5py>=3.16.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.20.0",
    "torch>=2.11.0",
]
