[project]
name = "plm4cpps-service"
version = "1.0.0"
description = "pLM4CPPs 微服务 - 细胞穿膜肽预测工具"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ml = [
    "biopython>=1.87",
    "fair-esm>=2.0.0",
    "h5py>=3.16.0",
    "tensorflow>=2.20.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
]
all = [
    "biopython>=1.87",
    "fair-esm>=2.0.0",
    "h5py>=3.16.0",
    "tensorflow>=2.20.0",
    "torch>=2.0.0",
    "scikit-learn>=1.0.0",
]